# audio-plugin-template

./: .clang-format  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake.yml
cmake/: CompilerWarnings.cmake  Util.cmake  cpm.cmake
plugin/: CMakeLists.txt
plugin/include/YourPluginName/: PluginEditor.h  PluginProcessor.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
